fix: Run report view horizontal scroll issue

--- a/src/app/reports/run-report/table-and-sms/table-and-sms.component.scss
+++ b/src/app/reports/run-report/table-and-sms/table-and-sms.component.scss
@@ -1,11 +1,16 @@
-.select-row:hover {
-    cursor: pointer;
-  }
+.table-output {
+  overflow: auto;
+}
 
-.mat-header-cell, .mat-cell {
-    min-width: 150px;
-    margin-left: 5px;
-    margin-right: 5px;
+.select-row:hover {
+  cursor: pointer;
+}
+
+.mat-header-cell,
+.mat-cell {
+  min-width: 150px;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 .back-button {
